--- a/AutonoBarberDesktop/src/main/resources/org/example/autonobarberdesktop/cadastro-barbeiro.fxml
+++ b/AutonoBarberDesktop/src/main/resources/org/example/autonobarberdesktop/cadastro-barbeiro.fxml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.autonobarberdesktop.controller.CadastroBarbeiroController"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.autonobarberdesktop.controller.CadastroBarbeiroController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
 
-</AnchorPane>
+    <Label text="CADASTRO - Barbeiro" />
+    <HBox prefHeight="0.0" prefWidth="200.0">
+        <children>
+            <Label text="Nome" />
+            <TextField fx:id="txtNome" />
+        </children>
+    </HBox>
+    <HBox prefHeight="0.0" prefWidth="200.0">
+        <children>
+            <Label text="Email" />
+            <TextField fx:id="txtEmail" />
+        </children>
+    </HBox>
+    <HBox prefHeight="0.0" prefWidth="200.0">
+        <children>
+            <Label text="Senha" />
+            <TextField fx:id="txtSenha" />
+        </children>
+    </HBox>
+    <Button mnemonicParsing="false" onAction="#cadastrarBarbeiro" text="Cadastrar" />
+
+</VBox>
